# fastapi-mongodb

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  openapi.json  output.json  package-lock.json  package.json  pyproject.toml
app/: app.py  main.py
app/components/authentication/: auth_manager.py
app/core/: config.py  logger.py
app/database/: database.py  items.py  users.py
app/models/: auth.py  generic.py  items.py  response.py  users.py
app/routes/: _routes.py  auth.py  generic.py  items.py  users.py
app/server/: app.py  database.py
app/server/models/: items.py
app/server/routes/: _routes.py  items.py
