[project]
name = "fastapi-mongodb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "jwt>=1.3.1",
    "motor>=3.6.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true